# child-allowance-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  lambda_function.py  mcp_config.json  mcp_fastapi_tester.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
infrastructure/: cloudformation.yaml  lambda_function.py
scripts/: deploy-infrastructure.sh
src/: app.py
src/handlers/: auth.py  calculations.py  expenditures.py
src/models/: child.py  expenditure.py
src/services/: database.py  google_sheets.py
src/static/css/: styles.css
src/static/js/: main.js
src/templates/: dashboard.html  expenditure_form.html  index.html
src/utils/: decorators.py  logger.py  validators.py
static/css/: styles.css
static/js/: main.js
tests/: conftest.py  test_app.py  test_auth.py  test_auth_integration.py  test_auth_simple_working.py  test_basic.py  test_current_app.py  test_fastapi_models_mcp.py  test_handlers.py  test_mcp_simple.py  test_models.py  test_services.py
