[project]
name = "child-allowance-tracker"
version = "0.1.0"
description = "Child allowance tracking app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.95.0",
    "gspread>=5.10.0",
    "python-dotenv>=1.0.0",
    "awsgi",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "cfn-lint>=1.36.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

lint.select = [
    "E", "W", "F", "I",    # basics
    "B", "C4", "UP",       # code quality
    "S",                   # security (important for web apps)
    "RUF",                 # ruff rules
]

lint.ignore = [
    "E501",   # line too long
    "S104",   # hardcoded bind all interfaces (0.0.0.0)
    "S105",   # hardcoded password (for dev configs)
    "S106",   # hardcoded password in function argument
    "S108",   # hardcoded temp file/directory
    "S311",   # random for cryptographic purposes
    "B008",   # function calls in argument defaults
]

# Per-file ignores
[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]  # allow assert and magic values in tests
"lambda_function.py" = ["E402"]  # allow sys.path modification
"tests/*.py" = ["E402"]  # allow sys.path modification in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]
